fixed wrapright sizes after the end of leftside content

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 #wrapRight {
 	 font-size: 1.0em;
      width: 480px;
-	 margin-left: 520px;
+	 margin-left: 610px;
 }
 
 
